--- a/Class Management/Views/ViewStudent.xaml
+++ b/Class Management/Views/ViewStudent.xaml
@@ -82,7 +82,7 @@
 
                 <DataGrid x:Name="student_list" Height="500" Grid.Row="2" Grid.Column="1"
                           IsReadOnly="True" HorizontalScrollBarVisibility="Visible" RowHeight="30" 
-                          SelectionUnit="FullRow" SelectionMode="Extended" MouseDoubleClick="student_list_MouseDoubleClick"
+                          SelectionUnit="FullRow" SelectionMode="Extended" MouseDoubleClick="Student_list_MouseDoubleClick"
                           AutoGenerateColumns="False" CanUserResizeColumns="False" CanUserResizeRows="False"
                           HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,10,50,0"
                           BorderBrush="#3F51B5" BorderThickness="2">
@@ -118,7 +118,7 @@
                 <Button x:Name="delete_all" Content="Delete all" Grid.Row="1" Visibility="Collapsed" Grid.Column="1"
                         BorderBrush="White" BorderThickness="2" FontSize="12"
                         Margin="110,20,0,0" Width="100" Style="{StaticResource btn}" 
-                        Click="delete_all_Click" />
+                        Click="Delete_all_Click" />
 
                 <ComboBox x:Name="segregator" Grid.Row="1" Margin="20,20,0,0" Grid.Column="1"
                           BorderBrush="#3F51B5" BorderThickness="1"
