--- a/Class Management/Views/Attendance.xaml
+++ b/Class Management/Views/Attendance.xaml
@@ -21,48 +21,6 @@
                 <Setter Property="Foreground" Value="#3F51B5" />
             </Style>
 
-            <Style x:Key="formtextbox"
-                   TargetType="{x:Type TextBox}">
-                <Setter Property="Grid.Column" Value="0"></Setter>
-                <Setter Property="HorizontalAlignment" Value="Left"></Setter>
-                <Setter Property="VerticalAlignment" Value="Top"></Setter>
-                <Setter Property="Height" Value="30"></Setter>
-                <Setter Property="TextWrapping" Value="Wrap"></Setter>
-                <Setter Property="FontSize" Value="15"></Setter>
-                <Setter Property="Foreground" Value="Black" />
-                <Setter Property="BorderBrush" Value="Transparent" />
-                <Setter Property="BorderThickness" Value="0" />
-                <Setter Property="VerticalContentAlignment" Value="Center" />
-                <Setter Property="Controls:TextBoxHelper.Watermark" Value="Enter here" />
-            </Style>
-
-            <Style x:Key="btn"
-                   TargetType="{x:Type Button}"
-                   BasedOn="{StaticResource MetroFlatButton}">
-                <Setter Property="Grid.Column" Value="1" />
-                <Setter Property="Grid.Row" Value="7" />
-                <Setter Property="HorizontalAlignment" Value="Left" />
-                <Setter Property="VerticalAlignment" Value="Top" />
-                <Setter Property="FontSize" Value="15" />
-                <Setter Property="Height" Value="35" />
-                <Setter Property="Width" Value="120" />
-                <Setter Property="Background" Value="#3F51B5" />
-                <Setter Property="Foreground" Value="White" />
-            </Style>
-
-            <Style x:Key="shortcutBtn"
-                   TargetType="{x:Type Button}"
-                   BasedOn="{StaticResource MetroFlatButton}">
-                <Setter Property="Background" Value="White" />
-                <Setter Property="Foreground" Value="#3F51B5" />
-            </Style>
-
-            <Style x:Key="cellsty" TargetType="DataGridCell">
-                <Setter Property="Background" Value="Transparent" />
-                <Setter Property="BorderBrush" Value="Transparent" />
-                <Setter Property="BorderThickness" Value="0,0.5,0,0.5" />
-            </Style>
-
             <Style x:Key="BatchButton" TargetType="Button">
                 <Setter Property="MinWidth" Value="100" />
                 <Setter Property="Margin" Value="10" />
@@ -85,6 +43,16 @@
                 <Setter Property="AutoGenerateColumns" Value="False"/>
                 <Setter Property="CanUserAddRows" Value="False"/>
             </Style>
+
+            <Style x:Key="MonthButtonStyle"
+                   TargetType="{x:Type Button}"
+                   BasedOn="{StaticResource MetroFlatButton}">
+                <Setter Property="Background" Value="MediumSeaGreen"/>
+                <Setter Property="Foreground" Value="White"/>
+                <Setter Property="FontSize" Value="16" />
+                <EventSetter Event="Click" Handler="Month_Select_Click" />
+            </Style>
+            
         </ResourceDictionary>
     </UserControl.Resources>
 
@@ -110,83 +78,55 @@
                     <StackPanel x:Name="batch_list" Orientation="Horizontal"></StackPanel>
                 </ScrollViewer>
 
-                <!--<Grid Visibility="Collapsed" Grid.Row="2">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="1*" />
-                        <ColumnDefinition Width="1*" />
-                    </Grid.ColumnDefinitions>
+                <StackPanel Orientation="Vertical" Grid.Row="2" Margin="20">
 
-                    <StackPanel Grid.Column="1" Orientation="Vertical" Margin="20">
-                        <ComboBox x:Name="Sorter" 
-                                  SelectionChanged="SortStudentList" 
-                                  HorizontalAlignment="Left"
-                                  FontSize="16"
-                                  Margin="5"
-                                  Style="{StaticResource MetroComboBox}">
-                            <ComboBoxItem IsSelected="True">Sort by Name</ComboBoxItem>
-                            <ComboBoxItem>Sort by Reg No</ComboBoxItem>
-                        </ComboBox>
-                        --><!--<DataGrid x:Name="AttendanceDatagrid" 
-                                  RowHeight="30"
-                                  IsReadOnly="True"
-                                  Margin="5"
-                                  CanUserSortColumns="False"
-                                  Style="{StaticResource DataGridStyle}"
-                                  BorderBrush="Black" 
-                                  BorderThickness="2">
-                            <DataGrid.RowStyle>
-                                <Style TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource MetroDataGridRow}">
-                                    <Setter Property="Height" Value="30" />
-                                    <Setter Property="FontSize" Value="16" />
-                                    <Setter Property="Foreground" Value="White" />
-                                </Style>
-                            </DataGrid.RowStyle>
-                            <DataGrid.Columns>
-                                <DataGridTextColumn Header="Reg no" MinWidth="120" x:Name="reg_no" Binding="{Binding RegNo}" />
-                                <DataGridTextColumn Header="Student Name" Width="1*" Binding="{Binding Name}" />
-                                <DataGridTemplateColumn Header="Present" Width="120">
-                                    <DataGridTemplateColumn.CellTemplate>
-                                        <DataTemplate>
-                                            <CheckBox x:Name="chk"/>
-                                        </DataTemplate>
-                                    </DataGridTemplateColumn.CellTemplate>
-                                </DataGridTemplateColumn>
-                            </DataGrid.Columns>
-                        </DataGrid>--><!--
-                        
-                        
-                    </StackPanel>
-                </Grid>-->
+                    <StackPanel x:Name="MonthStackPanel" 
+                                Orientation="Horizontal" 
+                                HorizontalAlignment="Right"
+                                Margin="0"></StackPanel>
 
-                <Grid Grid.Row="2">
-                    <DataGrid x:Name="AttendanceDataGrid" 
+                    <Menu x:Name="MonthMenu" HorizontalAlignment="Right">
+                        <Menu.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <VirtualizingStackPanel Orientation="Horizontal" />
+                            </ItemsPanelTemplate>
+                        </Menu.ItemsPanel>
+                    </Menu>
+                    <TabControl>
+                        
+                    </TabControl>
+
+                    <Grid Grid.Row="2">
+                        <DataGrid x:Name="AttendanceDataGrid" 
                               SelectionMode="Single"
                               SelectionUnit="Cell"
                               RowHeight="30"
                               IsReadOnly="True"
-                              Margin="5"
                               CanUserSortColumns="False"
                               Style="{StaticResource DataGridStyle}"
                               BorderBrush="Black" 
                               BorderThickness="2">
-                        <DataGrid.RowStyle>
+                            <DataGrid.RowStyle>
                                 <Style TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource MetroDataGridRow}">
                                     <Setter Property="Height" Value="30" />
                                     <Setter Property="FontSize" Value="16" />
-                                    <Setter Property="Foreground" Value="White" />
+                                    <Setter Property="Foreground" Value="Black" />
                                 </Style>
                             </DataGrid.RowStyle>
-                        <DataGrid.Columns>
-                            <!--<DataGridTextColumn Header="Reg no" Binding="{Binding RegNo}" />
-                            <DataGridTextColumn Header="Name" Width="1*" Binding="{Binding Name}" />-->
-                        </DataGrid.Columns>
-                    </DataGrid>
-                </Grid>
-
-                <Button x:Name="closeUC" Grid.Row="0" Width="30" Height="30" Click="closeUC_Click" 
+                            <DataGrid.Columns>
+                                <!--<DataGridTextColumn Header="Reg no" Binding="{Binding RegNo}" />
+                                <DataGridTextColumn Header="Name" Width="1*" Binding="{Binding Name}" />-->
+                            </DataGrid.Columns>
+                        </DataGrid>
+                    </Grid>
+                </StackPanel>
+                
+                <Button x:Name="closeUC" 
+                        Width="30" Height="30" 
+                        Click="closeUC_Click" 
                         Background="#3F51B5" Foreground="White"
-                        Grid.ColumnSpan="3"
-                        HorizontalAlignment="Right" Style="{StaticResource btn}">
+                        HorizontalAlignment="Right" VerticalAlignment="Top"
+                        Style="{StaticResource MetroFlatButton}">
                     <Controls:PackIconMaterial x:Name="CloseIcon" Kind="WindowClose" Height="10" Width="10" HorizontalAlignment="Center" VerticalAlignment="Center" />
                 </Button>
             </Grid>
