--- a/Class Management/Views/Attendance.xaml
+++ b/Class Management/Views/Attendance.xaml
@@ -11,15 +11,6 @@
              d:DesignHeight="800" d:DesignWidth="1500">
     <UserControl.Resources>
         <ResourceDictionary>
-            <Style x:Key="formlabel"
-                   TargetType="{x:Type Label}">
-                <Setter Property="FontSize" Value="15"></Setter>
-                <Setter Property="VerticalAlignment" Value="Top"></Setter>
-                <Setter Property="HorizontalAlignment" Value="Left"></Setter>
-                <Setter Property="Grid.Column" Value="0"></Setter>
-                <Setter Property="Background" Value="Transparent" />
-                <Setter Property="Foreground" Value="#3F51B5" />
-            </Style>
 
             <Style x:Key="BatchButton" TargetType="Button">
                 <Setter Property="MinWidth" Value="100" />
@@ -72,7 +63,7 @@
 
                 <Label Content="Attendance Manager" Margin="0,10,0,0" 
                        HorizontalAlignment="Center" VerticalAlignment="Top" 
-                       Style="{StaticResource formlabel}" FontSize="30"/>
+                       FontSize="30" Foreground="#3F51B5"/>
 
                 <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Auto" Margin="10">
                     <StackPanel x:Name="batch_list" Orientation="Horizontal"></StackPanel>
@@ -80,23 +71,38 @@
 
                 <StackPanel Orientation="Vertical" Grid.Row="2" Margin="20">
 
-                    <StackPanel x:Name="MonthStackPanel" 
-                                Orientation="Horizontal" 
-                                HorizontalAlignment="Right"
-                                Margin="0"></StackPanel>
+                    <Grid Margin="5 0">
+                        <Label x:Name="BatchNameLabel" HorizontalAlignment="Left" FontSize="20"/>
 
-                    <Menu x:Name="MonthMenu" HorizontalAlignment="Right">
-                        <Menu.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <VirtualizingStackPanel Orientation="Horizontal" />
-                            </ItemsPanelTemplate>
-                        </Menu.ItemsPanel>
-                    </Menu>
-                    <TabControl>
-                        
-                    </TabControl>
+                        <Menu x:Name="MonthMenu" HorizontalAlignment="Right">
+                            <Menu.Resources>
+                                <Style TargetType="{x:Type MenuItem}">
+                                    <EventSetter Event="Click" Handler="Month_Select_Click"/>
+                                    <Setter Property="FontSize" Value="16" />
+                                    <Setter Property="Padding" Value="10"/>
+                                </Style>
+                            </Menu.Resources>
+                            <Menu.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <VirtualizingStackPanel Orientation="Horizontal" />
+                                </ItemsPanelTemplate>
+                            </Menu.ItemsPanel>
+                            <MenuItem Header="January" x:Name="jan"/>
+                            <MenuItem Header="February" x:Name="feb"/>
+                            <MenuItem Header="March" x:Name="mar"/>
+                            <MenuItem Header="April" x:Name="apr"/>
+                            <MenuItem Header="May" x:Name="may"/>
+                            <MenuItem Header="June" x:Name="jun"/>
+                            <MenuItem Header="July" x:Name="jul"/>
+                            <MenuItem Header="August" x:Name="aug"/>
+                            <MenuItem Header="September" x:Name="sep"/>
+                            <MenuItem Header="October" x:Name="oct"/>
+                            <MenuItem Header="November" x:Name="nov"/>
+                            <MenuItem Header="December" x:Name="dec"/>
+                        </Menu>
+                    </Grid>
 
-                    <Grid Grid.Row="2">
+                    <Grid Grid.Row="2" Margin="5">
                         <DataGrid x:Name="AttendanceDataGrid" 
                               SelectionMode="Single"
                               SelectionUnit="Cell"
