--- a/Class Management/MainWindow.xaml
+++ b/Class Management/MainWindow.xaml
@@ -184,6 +184,7 @@
                     <Button x:Name="Batch" Content="Batch" Style="{StaticResource SubFlyoutBtn}" />
                     <Button x:Name="WeeklyTimetable" Content="Time Table" Style="{StaticResource SubFlyoutBtn}" />
                     <Button x:Name="Attendance" Content="Attendance" Style="{StaticResource SubFlyoutBtn}" />
+                    <Button x:Name="Budget" Content="Budget" Style="{StaticResource SubFlyoutBtn}" />
                 </StackPanel>
             </Controls:Flyout>
             <Controls:Flyout x:Name="StudentFlyout" Position="Top" Theme="Accent" CloseButtonVisibility="Hidden" Height="80">
